메인수정/cms목록정리

--- a/pub_list.html
+++ b/pub_list.html
@@ -1221,7 +1221,7 @@
                 {
                     division: 'CMS',
                     depth1:'커뮤니티 목록',
-                    path:'../cms/index33.html',
+                    path:'./cms/index33.html',
                     date:'',
                     mdate:'',
                     con:'완료',
@@ -1230,7 +1230,7 @@
                 {
                     division: '',
                     depth1:'커뮤니티 목록 상세',
-                    path:'../cms/index35.html',
+                    path:'./cms/index35.html',
                     date:'2022-11-22',
                     mdate:'',
                     con:'완료',
@@ -1239,7 +1239,7 @@
                 {
                     division: '',
                     depth1:'커뮤니티 공지사항',
-                    path:'../cms/index36.html',
+                    path:'./cms/index36.html',
                     date:'2022-11-22',
                     mdate:'',
                     con:'완료',
@@ -1248,7 +1248,7 @@
                 {
                     division: '',
                     depth1:'커뮤니티 공지사항 상세',
-                    path:'../cms/index36-1.html',
+                    path:'./cms/index36-1.html',
                     date:'2022-11-22',
                     mdate:'',
                     con:'완료',
@@ -1257,7 +1257,7 @@
                 {
                     division: '',
                     depth1:'커뮤니티 자유게시판',
-                    path:'../cms/index37.html',
+                    path:'./cms/index37.html',
                     date:'2022-11-23',
                     mdate:'',
                     con:'완료',
@@ -1266,7 +1266,7 @@
                 {
                     division: '',
                     depth1:'커뮤니티 자유게시판 상세',
-                    path:'../cms/index37-1.html',
+                    path:'./cms/index37-1.html',
                     date:'2022-11-23',
                     mdate:'',
                     con:'완료',
@@ -1275,7 +1275,7 @@
                 {
                     division: '',
                     depth1:'커뮤니티 일정',
-                    path:'../cms/index38.html',
+                    path:'./cms/index38.html',
                     date:'2022-11-23',
                     mdate:'',
                     con:'완료',
@@ -1284,7 +1284,7 @@
                 {
                     division: '',
                     depth1:'커뮤니티 게시판',
-                    path:'../cms/index39.html',
+                    path:'./cms/index39.html',
                     date:'2022-11-23',
                     mdate:'',
                     con:'완료',
@@ -1293,7 +1293,7 @@
                 {
                     division: '',
                     depth1:'벤처투자 TALK 관리',
-                    path:'../cms/index40.html',
+                    path:'./cms/index40.html',
                     date:'2022-11-23',
                     mdate:'',
                     con:'완료',
@@ -1302,7 +1302,7 @@
                 {
                     division: '',
                     depth1:'벤처투자마트 1차신청관리',
-                    path:'../cms/index41.html',
+                    path:'./cms/index41.html',
                     date:'2022-11-23',
                     mdate:'',
                     con:'완료',
@@ -1311,7 +1311,7 @@
                 {
                     division: '',
                     depth1:'벤처투자마트 1차신청관리 상세',
-                    path:'../cms/index42.html',
+                    path:'./cms/index42.html',
                     date:'2022-11-23',
                     mdate:'',
                     con:'완료',
@@ -1320,7 +1320,7 @@
                 {
                     division: '',
                     depth1:'벤처투자마트 2차신청관리',
-                    path:'../cms/index43.html',
+                    path:'./cms/index43.html',
                     date:'2022-11-23',
                     mdate:'',
                     con:'완료',
@@ -1329,7 +1329,7 @@
                 {
                     division: '',
                     depth1:'벤처투자마트 2차신청관리 상세',
-                    path:'../cms/index43-1.html',
+                    path:'./cms/index43-1.html',
                     date:'2022-11-24',
                     mdate:'',
                     con:'완료',
@@ -1338,7 +1338,7 @@
                 {
                     division: '',
                     depth1:'벤처투자마트 2차신청관리 상세',
-                    path:'../cms/index43-2.html',
+                    path:'./cms/index43-2.html',
                     date:'2022-11-24',
                     mdate:'',
                     con:'완료',
@@ -1347,7 +1347,7 @@
                 {
                     division: '',
                     depth1:'벤처투자마트 2차신청관리 상세',
-                    path:'../cms/index43-3.html',
+                    path:'./cms/index43-3.html',
                     date:'2022-11-24',
                     mdate:'',
                     con:'완료',
@@ -1356,7 +1356,7 @@
                 {
                     division: '',
                     depth1:'벤처투자마트 2차신청관리 상세',
-                    path:'../cms/index43-4.html',
+                    path:'./cms/index43-4.html',
                     date:'2022-11-24',
                     mdate:'',
                     con:'완료',
@@ -1365,7 +1365,7 @@
                 {
                     division: '',
                     depth1:'벤처투자마트 2차신청관리 상세',
-                    path:'../cms/index43-5.html',
+                    path:'./cms/index43-5.html',
                     date:'2022-11-24',
                     mdate:'',
                     con:'완료',
@@ -1374,7 +1374,7 @@
                 {
                     division: '',
                     depth1:'벤처투자마트 2차신청관리 상세',
-                    path:'../cms/index43-6.html',
+                    path:'./cms/index43-6.html',
                     date:'2022-11-24',
                     mdate:'',
                     con:'완료',
@@ -1383,7 +1383,7 @@
                 {
                     division: '',
                     depth1:'구인구직 관리 - 채용공고 관리',
-                    path:'../cms/index44.html',
+                    path:'./cms/index44.html',
                     date:'2022-11-24',
                     mdate:'',
                     con:'완료',
@@ -1392,7 +1392,7 @@
                 {
                     division: '',
                     depth1:'구인구직 관리 - 채용공고 수정/상세',
-                    path:'../cms/index45.html',
+                    path:'./cms/index45.html',
                     date:'2022-11-24',
                     mdate:'',
                     con:'완료',
@@ -1401,7 +1401,7 @@
                 {
                     division: '',
                     depth1:'구인구직 관리 - 인력풀 관리',
-                    path:'../cms/index47.html',
+                    path:'./cms/index47.html',
                     date:'2022-11-24',
                     mdate:'',
                     con:'완료',
@@ -1410,7 +1410,7 @@
                 {
                     division: '',
                     depth1:'구인구직 관리 - 인력풀 관리 수정/상세',
-                    path:'../cms/index48.html',
+                    path:'./cms/index48.html',
                     date:'2022-11-24',
                     mdate:'',
                     con:'완료',
