--- a/portal/html/main.html
+++ b/portal/html/main.html
@@ -946,68 +946,78 @@
                                             <!-- 첫번째 탭 -->
                                             <div class="on sec_cont_001">
                                                 
-                                                <div class="tbl_main_table">
+                                                <div class="tbl_main_table alink">
                                                     <span>2022-05-26 기준</span>
                                                     <ul>
                                                         <li>
-                                                            <div class="date">
-                                                                <span>2022-05</span>
-                                                                <strong>26</strong>
-                                                            </div>
-                                                            <div>
-                                                                <div>신기술사</div>
-                                                                <div>KT인베스트먼트</div>
-                                                            </div>
-                                                            <div>정기</div>
-                                                            <div>2021-정기공시</div>
+                                                            <a href="">
+                                                                <div class="date">
+                                                                    <span>2022-05</span>
+                                                                    <strong>26</strong>
+                                                                </div>
+                                                                <div>
+                                                                    <div>신기술사</div>
+                                                                    <div>KT인베스트먼트</div>
+                                                                </div>
+                                                                <div>정기</div>
+                                                                <div>2021-정기공시</div>
+                                                            </a>
                                                         </li>
                                                         <li>
-                                                            <div class="date">
-                                                                <span>2022-05</span>
-                                                                <strong>23</strong>
-                                                            </div>
-                                                            <div>
-                                                                <div>LLC</div>
-                                                                <div>가이아벤처파트너스</div>
-                                                            </div>
-                                                            <div>수시</div>
-                                                            <div>2021-정기공시</div>
+                                                            <a href="">
+                                                                <div class="date">
+                                                                    <span>2022-05</span>
+                                                                    <strong>23</strong>
+                                                                </div>
+                                                                <div>
+                                                                    <div>LLC</div>
+                                                                    <div>가이아벤처파트너스</div>
+                                                                </div>
+                                                                <div>수시</div>
+                                                                <div>2021-정기공시</div>
+                                                            </a>
                                                         </li>
                                                         <li>
-                                                            <div class="date">
-                                                                <span>2022-05</span>
-                                                                <strong>20</strong>
-                                                            </div>
-                                                            <div>
-                                                                <div>기타운용사</div>
-                                                                <div>네끌림벤처스</div>
-                                                            </div>
-                                                            <div>자율</div>
-                                                            <div>2021-정기공시</div>
+                                                            <a href="">
+                                                                <div class="date">
+                                                                    <span>2022-05</span>
+                                                                    <strong>20</strong>
+                                                                </div>
+                                                                <div>
+                                                                    <div>기타운용사</div>
+                                                                    <div>네끌림벤처스</div>
+                                                                </div>
+                                                                <div>자율</div>
+                                                                <div>2021-정기공시</div>
+                                                            </a>
                                                         </li>
                                                         <li>
-                                                            <div class="date">
-                                                                <span>2022-05</span>
-                                                                <strong>02</strong>
-                                                            </div>
-                                                            <div>
-                                                                <div>창업투자회사</div>
-                                                                <div>오인사이트벤처스</div>
-                                                            </div>
-                                                            <div>수시</div>
-                                                            <div>신규조합결성</div>
+                                                            <a href="">
+                                                                <div class="date">
+                                                                    <span>2022-05</span>
+                                                                    <strong>02</strong>
+                                                                </div>
+                                                                <div>
+                                                                    <div>창업투자회사</div>
+                                                                    <div>오인사이트벤처스</div>
+                                                                </div>
+                                                                <div>수시</div>
+                                                                <div>신규조합결성</div>
+                                                            </a>
                                                         </li>
                                                         <li>
-                                                            <div class="date">
-                                                                <span>2022-05</span>
-                                                                <strong>27</strong>
-                                                            </div>
-                                                            <div>
-                                                                <div>창업기획자</div>
-                                                                <div>에이엔컴퍼티</div>
-                                                            </div>
-                                                            <div>정기</div>
-                                                            <div>2021-03 수시공시</div>
+                                                            <a href="">
+                                                                <div class="date">
+                                                                    <span>2022-05</span>
+                                                                    <strong>27</strong>
+                                                                </div>
+                                                                <div>
+                                                                    <div>창업기획자</div>
+                                                                    <div>에이엔컴퍼티</div>
+                                                                </div>
+                                                                <div>정기</div>
+                                                                <div>2021-03 수시공시</div>
+                                                            </a>
                                                         </li>
                                                     </ul>
                                                     <div class="btn_box">
