--- a/portal/html/USR-1242-F-DTL.html
+++ b/portal/html/USR-1242-F-DTL.html
@@ -296,9 +296,13 @@
                                     <span class="mauve">기업업종</span>
                                     <span class="green">특이사항</span>
                                 </div>
-                                <div class="btn_box">
-                                    <button class="btn_blue shadow dialog-link" data-target="#note_01">채용제안 쪽지 보내기</button>
-                                    <a href="" class="btn_setting">설정</a>
+                                <div class="btn_box_group">
+                                    <div class="btn_box">
+                                        <button class="btn_blue shadow dialog-link" data-target="#note_01">채용제안 쪽지 보내기</button>
+                                    </div>
+                                    <div class="btn_box">
+                                        <a href="" class="btn_setting">설정</a>
+                                    </div>
                                 </div>
                             </div>
                             <div class="tit">
