--- a/portal/html/USR-1337-B-DTL.html
+++ b/portal/html/USR-1337-B-DTL.html
@@ -290,8 +290,10 @@
                                     <span class="green">바이오/의료</span>
                                     <span class="brown">친목/모임</span>
                                 </div>
-                                <div class="btn_box">
-                                    <a href="" class="btn_setting">설정</a>
+                                <div class="btn_box_group">
+                                    <div class="btn_box">
+                                        <a href="" class="btn_setting">설정</a>
+                                    </div>
                                 </div>
                             </div>
                             <div class="tit">
