마이페이지 수정

--- a/portal/html/USR-1020-F-DTL.html
+++ b/portal/html/USR-1020-F-DTL.html
@@ -362,8 +362,13 @@
                             <div class="investment_list">
                                 <div class="tit">
                                     <strong>공시현황</strong>
-                                    <div class="btn_box">
-                                        <a href="">공시 더보기</a>
+                                    <div class="btn_box_group">
+                                        <div class="btn_box">
+                                            <a href="">공시 더보기</a>
+                                        </div>
+                                        <div class="btn_box">
+                                            <a href="">공시 더보기</a>
+                                        </div>
                                     </div>
                                 </div>
                                 <ul>
