--- a/portal/html/USR-1336-B-DTL.html
+++ b/portal/html/USR-1336-B-DTL.html
@@ -288,7 +288,7 @@
                                 <div class="state_box type_02">
                                     <span class="mauve">투자사구분</span>
                                     <span class="green">바이오/의료</span>
-                                    <span class="brown">친목/모임</span>
+                                    <span class="brown">친목/모임</span>.
                                 </div>
                                 <div class="btn_box_group">
                                     <div class="btn_box">
