--- a/portal/html/USR-02-02-F-LIST.html
+++ b/portal/html/USR-02-02-F-LIST.html
@@ -354,7 +354,7 @@
                     <ul>
                         <li>
                             <div class="tit">
-                                <strong>벤처투자마트 개최 안내</strong>
+                                <a href=""><strong>벤처투자마트 개최 안내</strong></a>
                                 <span>투자하고자 하는 각 분야의 벤처기업을 검색할 수 있습니다. 또한, 각 기업의 담당자를 확인하고, IR자료등의 정보를 확인 할 수 있습니다.</span>
                             </div>
                             <div class="favorite_box">
@@ -376,7 +376,7 @@
                         </li>
                         <li>
                             <div class="tit">
-                                <strong>벤처투자마트 개최 안내</strong>
+                                <a href=""><strong>벤처투자마트 개최 안내</strong></a>
                                 <span>투자하고자 하는 각 분야의 벤처기업을 검색할 수 있습니다. 또한, 각 기업의 담당자를 확인하고, IR자료등의 정보를 확인 할 수 있습니다.</span>
                             </div>
                             <div class="favorite_box">
@@ -398,7 +398,7 @@
                         </li>
                         <li>
                             <div class="tit">
-                                <strong>벤처투자마트 개최 안내</strong>
+                                <a href=""><strong>벤처투자마트 개최 안내</strong></a>
                                 <span>투자하고자 하는 각 분야의 벤처기업을 검색할 수 있습니다. 또한, 각 기업의 담당자를 확인하고, IR자료등의 정보를 확인 할 수 있습니다.</span>
                             </div>
                             <div class="favorite_box">
@@ -420,7 +420,7 @@
                         </li>
                         <li>
                             <div class="tit">
-                                <strong>벤처투자마트 개최 안내</strong>
+                                <a href=""><strong>벤처투자마트 개최 안내</strong></a>
                                 <span>투자하고자 하는 각 분야의 벤처기업을 검색할 수 있습니다. 또한, 각 기업의 담당자를 확인하고, IR자료등의 정보를 확인 할 수 있습니다.</span>
                             </div>
                             <div class="favorite_box">
@@ -442,7 +442,7 @@
                         </li>
                         <li>
                             <div class="tit">
-                                <strong>벤처투자마트 개최 안내</strong>
+                                <a href=""><strong>벤처투자마트 개최 안내</strong></a>
                                 <span>투자하고자 하는 각 분야의 벤처기업을 검색할 수 있습니다. 또한, 각 기업의 담당자를 확인하고, IR자료등의 정보를 확인 할 수 있습니다.</span>
                             </div>
                             <div class="favorite_box">
@@ -464,7 +464,7 @@
                         </li>
                         <li>
                             <div class="tit">
-                                <strong>벤처투자마트 개최 안내</strong>
+                                <a href=""><strong>벤처투자마트 개최 안내</strong></a>
                                 <span>투자하고자 하는 각 분야의 벤처기업을 검색할 수 있습니다. 또한, 각 기업의 담당자를 확인하고, IR자료등의 정보를 확인 할 수 있습니다.</span>
                             </div>
                             <div class="favorite_box">
@@ -486,7 +486,7 @@
                         </li>
                         <li>
                             <div class="tit">
-                                <strong>벤처투자마트 개최 안내</strong>
+                                <a href=""><strong>벤처투자마트 개최 안내</strong></a>
                                 <span>투자하고자 하는 각 분야의 벤처기업을 검색할 수 있습니다. 또한, 각 기업의 담당자를 확인하고, IR자료등의 정보를 확인 할 수 있습니다.</span>
                             </div>
                             <div class="favorite_box">
