--- a/portal/html/USR-1334-F-DASH.html
+++ b/portal/html/USR-1334-F-DASH.html
@@ -677,6 +677,10 @@
 
                         <!-- 세번째 탭 -->
                         <div class="tab_content_03">
+
+                            <div class="tit_box">
+                                <h4><span></span>자유게시판</h4>
+                            </div>
                             
                             <div class="board_infobox">
                                 <div class="total">전체 <span>150</span>건</div>
