--- a/pub_list.html
+++ b/pub_list.html
@@ -189,7 +189,7 @@
                     date:'2022-08-25',
                     mdate:'2022-09-05',
                     con:'완료',
-                    etc:''
+                    etc:'(11/30) 펀드/조합보기 a태그 제거 및 class추가'
                 },
                 {
                     division: '',
@@ -198,7 +198,7 @@
                     date:'2022-08-30',
                     mdate:'2022-09-05',
                     con:'완료',
-                    etc:'(11/21)상세 소제목 수정'
+                    etc:'(11/21)상세 소제목 수정<br/>(11/30) 펀드/조합보기 a태그 제거 및 class추가'
                 },
                 {
                     division: '',
@@ -782,7 +782,7 @@
                     date:'2022-08-30',
                     mdate:'2022-10-07',
                     con:'완료',
-                    etc:''
+                    etc:'(11/30) 자유게시판 제목 추가'
                 },
                 {
                     division: '',
@@ -1018,7 +1018,7 @@
                     date:'2022-09-07',
                     mdate:'2022-11-22',
                     con:'완료',
-                    etc:''
+                    etc:'(11/30) tbl_longcard class수정'
                 },
                 {
                     division: '',
