CMS 대시보드 1안/2안 추가

--- a/pub_list.html
+++ b/pub_list.html
@@ -1220,9 +1220,27 @@
                 },
                 {
                     division: 'CMS',
+                    depth1:'대시보드 1안',
+                    path:'./cms/index00.html',
+                    date:'2022-11-30',
+                    mdate:'',
+                    con:'완료',
+                    etc:''
+                },
+                {
+                    division: '',
+                    depth1:'대시보드 2안',
+                    path:'./cms/index01.html',
+                    date:'2022-11-30',
+                    mdate:'',
+                    con:'완료',
+                    etc:''
+                },
+                {
+                    division: '',
                     depth1:'커뮤니티 목록',
                     path:'./cms/index33.html',
-                    date:'',
+                    date:'2022-11-30',
                     mdate:'',
                     con:'완료',
                     etc:''
