투자자검색 검색어 추가

--- a/cms/index01.html
+++ b/cms/index01.html
@@ -477,7 +477,7 @@ jQuery(function($){
 	                    <div class="col-md-6 m-b-30">
 							<div class="card h-100">
 	                            <div class="card-body">
-	                                <h4 class="mt-0 header-title">데이터 연동 현황</h4>
+	                                <h4 class="mt-0 header-title">게시물 등록 현황</h4>
 	
 	                                <div class="mt-4">
 										<table class="table table-hover">
