검색조건 이름 추가

--- a/portal/html/USR-1010-F-LIST.html
+++ b/portal/html/USR-1010-F-LIST.html
@@ -760,6 +760,14 @@
                                     <button class="btn_skyblue">검색</button>
                                 </div>
                             </div>
+                            <div class="search_word">
+                                <span class="tit">선택된 검색조건</span>
+                                <div class="word_box"><a href="">창투사</a><button class="delete">삭제</button></div>
+                                <div class="word_box"><a href="">업력 1년초과 ~ 3년이하</a><button class="delete">삭제</button></div>
+                                <div class="word_box"><a href="">도시재생</a><button class="delete">삭제</button></div>
+                                <div class="word_box"><a href="">100억 미만</a><button class="delete">삭제</button></div>
+                                <div class="word_box"><a href="">ICT제조</a><button class="delete">삭제</button></div>
+                            </div>
                         </div>
     
                     </div>
