--- a/pub_list.html
+++ b/pub_list.html
@@ -189,7 +189,7 @@
                     date:'2022-08-25',
                     mdate:'2022-09-05',
                     con:'완료',
-                    etc:'(11/30) 펀드/조합보기 a태그 제거 및 class추가'
+                    etc:'(11/30) 펀드/조합보기 a태그 제거 및 class추가<br/>(12/01) 검색조건 이름 추가 -> search_form_box 밑에 search_word 추가'
                 },
                 {
                     division: '',
@@ -207,7 +207,7 @@
                     date:'2022-08-30',
                     mdate:'2022-09-05',
                     con:'완료',
-                    etc:'(11/22) 검색결과없음 추가'
+                    etc:'(11/22) 검색결과없음 추가<br/>(12/01) 검색조건 이름 추가 -> search_form_box 밑에 search_word 추가'
                 },
                 {
                     division: '',
