엔젤투자 AtoZ 링크에  파일 다운로드 추가

--- a/portal/html/USR-1110-H-CONTN.html
+++ b/portal/html/USR-1110-H-CONTN.html
@@ -404,7 +404,7 @@
                         <a href="" class="btn_navy">벤처캐피탈 A to Z</a>
                     </div>
                     <div class="btn_box">
-                        <a href="" class="btn_blue">엔젤투자  A to Z</a>
+                        <a href="../file/엔젤투자 A to Z 콘텐츠 자료(한국엔젤투자협회).docx" class="btn_blue" title="파일 다운로드" download>엔젤투자  A to Z</a>
                     </div>
                     <div class="btn_box">
                         <a href="" class="btn_mint">창업기획자 A to Z</a>
