--- a/pub_list.html
+++ b/pub_list.html
@@ -426,7 +426,7 @@
                     date:'2022-11-22',
                     mdate:'2022-09-05',
                     con:'완료',
-                    etc:''
+                    etc:'(12/06) 엔젤투자 AtoZ 링크에  파일 다운로드 추가'
                 },
                 {
                     division: '',
