--- a/portal/html/main.html
+++ b/portal/html/main.html
@@ -265,14 +265,14 @@
                         <div class="slide_wrap first">
                             <div class="img">
                                 <video autoplay muted loop data-autoplay playsinline>
-                                    <source data-src="../images/video/km_20221108_1080p_.mp4" ype="video/mp4">
+                                    <source data-src="../images/video/km_20221108_1080p_.mp4" src="../images/video/km_20221108_1080p_.mp4" type="video/mp4">
                                     해당 브라우저는 video 태그를 지원하지 않습니다.
                                 </video>
                             </div>
                             <div class="inner">
                                 <div class="tit">
                                     <h2>
-                                        <div><strong>모든 벤처 투자 정보</strong>를 하나로!</div>
+                                        <span><strong>모든 벤처 투자 정보</strong>를 하나로!</span>
                                     </h2>
                                 </div>
                                 <ul class="total">
@@ -1635,8 +1635,8 @@
 <div class="layer-popup" id="layer_popup_6" style=" z-index : 99998; position:absolute; top:0px; left:235px;">
     <img class="layer-popup-image" src="../images/noimage/news/noimage_news.jpg" alt="팝업">
     <div class="not-today">
-        <input class="not-today-6" id="not_today_6" type="checkbox" name="notToday" value="1">
-        <label class="not-today-6" for="not_today_6">오늘 하루 보지 않기</label>
+        <input class="not-today-6" id="not_today_61" type="checkbox" name="notToday" value="1">
+        <label class="not-today-6" for="not_today_61">오늘 하루 보지 않기</label>
         <a href="" class="layer-close"><img src="http://192.168.0.30/design/common/images/asset/close.png" alt="닫기"></a>
     </div>
 </div>
