웹표준 수정

--- a/portal/html/main.html
+++ b/portal/html/main.html
@@ -358,7 +358,7 @@
                             <div class="inner">
                                 <div class="tit">
                                     <h2>
-                                        <div><strong>벤처기업</strong>에 투자하고 싶다면?</div>
+                                        <span><strong>벤처기업</strong>에 투자하고 싶다면?</span>
                                     </h2>
                                 </div>
                                 <ul class="total">
@@ -437,7 +437,7 @@
                             <div class="inner">
                                 <div class="tit">
                                     <h2>
-                                        <div><strong>투자유치</strong>를 희망합니다!</div>
+                                        <span><strong>투자유치</strong>를 희망합니다!</span>
                                     </h2>
                                 </div>
                                 <ul class="total">
