br슬래시제거

--- a/portal/html/main.html
+++ b/portal/html/main.html
@@ -398,7 +398,7 @@
                                             <div class="swiper-slide">
                                                 <a href="">
                                                     <span></span>
-                                                    <strong>투자유치 희망기업<br/>검색</strong>
+                                                    <strong>투자유치 희망기업<br>검색</strong>
                                                 </a>
                                             </div>
                                             <div class="swiper-slide">
@@ -881,7 +881,7 @@
                                 <dd>
                                     <div class="txt">
                                         <a href="">
-                                            <strong>한국벤처투자 캐피탈 협회<br/>VC DISCOVERY<br/>vol.169</strong>
+                                            <strong>한국벤처투자 캐피탈 협회<br>VC DISCOVERY<br>vol.169</strong>
                                         </a>
                                         <span>2022-03-21</span>
                                     </div>
