VC업무지원 추가

--- a/pub_list.html
+++ b/pub_list.html
@@ -1434,6 +1434,15 @@
                     con:'완료',
                     etc:''
                 },
+                {
+                    division: '',
+                    depth1:'VC 업무지원',
+                    path:'./cms/index50.html',
+                    date:'2022-12-08',
+                    mdate:'',
+                    con:'완료',
+                    etc:''
+                },
             ];
         
 
