벤처투자마트 2차신청 cms 이메일 발송 버튼/팝업 추가

--- a/pub_list.html
+++ b/pub_list.html
@@ -1351,7 +1351,7 @@
                     date:'2022-11-24',
                     mdate:'',
                     con:'완료',
-                    etc:''
+                    etc:'(12/13) 이메일 발송 팝업 추가'
                 },
                 {
                     division: '',
