cms 상담위원관리 페이지추가

--- a/pub_list.html
+++ b/pub_list.html
@@ -1437,8 +1437,17 @@
                 {
                     division: '',
                     depth1:'VC 업무지원',
-                    path:'./cms/index50.html',
+                    path:'./cms/index53.html',
                     date:'2022-12-08',
+                    mdate:'',
+                    con:'완료',
+                    etc:''
+                },
+                {
+                    division: '',
+                    depth1:'상담위원관리',
+                    path:'./cms/index54.html',
+                    date:'2022-12-16',
                     mdate:'',
                     con:'완료',
                     etc:''
