데이터없음 추가

--- a/portal/html/USR-1010-F-LIST.html
+++ b/portal/html/USR-1010-F-LIST.html
@@ -1038,8 +1038,9 @@
                                 </div>
                             </a>
                         </li>
+                        <!-- 데이터 없을시 문구출력 -->
                         <li class="nodata">
-                            검색결과가 없습니다.
+                            데이터가 존재하지 않습니다.
                         </li>
                     </ul>
 
