--- a/portal/html/USR-1020-F-LIST.html
+++ b/portal/html/USR-1020-F-LIST.html
@@ -1196,6 +1196,10 @@
                                             </div>
                                         </a>
                                     </li>
+                                    <!-- 데이터 없을시 문구출력 -->
+                                    <li class="nodata">
+                                        데이터가 존재하지 않습니다.
+                                    </li>
                                 </ul>
 
                             </div>
@@ -1407,6 +1411,10 @@
                                         <div class="hashtag">
                                             <span>#세컨더리</span>
                                         </div>
+                                    </li>
+                                    <!-- 데이터 없을시 문구출력 -->
+                                    <li class="nodata">
+                                        데이터가 존재하지 않습니다.
                                     </li>
                                 </ul>
 
