투자실적 업종별 셀렉트 박스 추가

--- a/portal/html/USR-1221-F-DASH.html
+++ b/portal/html/USR-1221-F-DASH.html
@@ -353,7 +353,7 @@
                         <!-- 첫번째 탭 -->
                         <div class="on tab_content_01">
 
-                            <!-- 버튼 -->
+                            <!-- 버튼
                             <div class="inp_group mb20">
                                 <div class="disclosure_box">
                                     <div class="btn_list type_02">
@@ -365,12 +365,19 @@
                                         </button>
                                     </div>
                                 </div>
-                            </div>
+                            </div> -->
 
                             <div class="investment_performance_box">
 
                                 <!-- 차트 -->
                                 <div class="left">
+                                    <!-- 20221221 셀렉트박스 추가 -->
+                                    <div class="sel_box">
+                                        <select>
+                                            <option value="">벤처투자조합</option>
+                                            <option value="">개인투자조합</option>
+                                        </select>
+                                    </div>
                                     <div class="chart">
                                         <!-- <img src="../images/content/chart_03.png" alt="" style="width: 100%;"> -->
                                     </div>
