고객요청사항 수정

--- a/portal/html/USR-1310-H-CONTN.html
+++ b/portal/html/USR-1310-H-CONTN.html
@@ -390,6 +390,12 @@
                         </div>
                     </div>
 
+                    <div class="btn_box_group type_01">
+                        <div class="btn_box">
+                            <a href="./USR-1311-H-CONTN.html" class="btn_blue">BI소개 바로가기 ></a>
+                        </div>
+                    </div>
+
                 </div>
 
             </div>
