--- a/portal/html/USR-1320-B-LIST.html
+++ b/portal/html/USR-1320-B-LIST.html
@@ -333,7 +333,7 @@
                 </div>
 
                 <div class="tab_group">
-                    <div class="tab_btn">
+                    <div class="tab_btn type_01">
                         <ul>
                             <li class="on"><a href="" rel="tab_content_01">전체</a></li>
                             <li><a href="" rel="tab_content_02">벤처투자포털</a></li>
