--- a/portal/html/main.html
+++ b/portal/html/main.html
@@ -1685,7 +1685,7 @@
 
 </div>
 
-<!-- 기본 레이어 팝업 -->
+<!-- 기본 레이어 팝업
 <div class="layer-popup" id="layer_popup_6" style=" z-index : 99998; position:absolute; top:0px; left:235px;">
     <img class="layer-popup-image" src="../images/noimage/news/noimage_news.jpg" alt="팝업">
     <div class="not-today">
@@ -1693,8 +1693,8 @@
         <label class="not-today-6" for="not_today_61">오늘 하루 보지 않기</label>
         <a href="" class="layer-close"><img src="http://192.168.0.30/design/common/images/asset/close.png" alt="닫기"></a>
     </div>
-</div>
-<!-- 기본 레이어 팝업 -->
+</div> -->
+<!-- 기본 레이어 팝업
 <div class="layer-popup" id="layer_popup_7" style=" z-index : 99998; position:absolute; top:400px; left:0px;">
     <img class="layer-popup-image" src="http://192.168.0.30/web/portal/file/image/uu/02c9412187a94086a79add757f27dc86" alt="팝업">
     <div class="layer-link-wrap">
@@ -1705,6 +1705,6 @@
         <label class="not-today-6" for="not_today_6">오늘 하루 보지 않기</label>
         <a href="" class="layer-close"><img src="http://192.168.0.30/design/common/images/asset/close.png" alt="닫기"></a>
     </div>
-</div>
+</div> -->
 </body>
 </html>
