--- a/portal/html/pub_guide.html
+++ b/portal/html/pub_guide.html
@@ -1031,6 +1031,41 @@
 
                     </div>
                 </div>
+                <div class="tab_group">
+                    <div class="tab_btn type_01">
+                        <ul>
+                            <li class="on"><a href="javascript:void(0);" class="tab" id="">전체</a></li>
+                            <li><a href="javascript:void(0);" class="tab" id="1">벤처투자종합포털</a></li>
+                            <li><a href="javascript:void(0);" class="tab" id="2">한국벤처투자</a></li>
+                            <li><a href="javascript:void(0);" class="tab" id="3">한국벤처캐피탈협회</a></li>
+                            <li><a href="javascript:void(0);" class="tab" id="4">한국엔젤투자협회</a></li>
+                            <li><a href="javascript:void(0);" class="tab" id="5">창업진흥원</a></li>
+                        </ul>
+                    </div>
+                    <div class="tab_content">
+
+                        <!-- 첫번째 탭 -->
+                        <div class="on tab_content_01">내용1</div>
+                        <!-- //첫번째 탭 -->
+
+                        <!-- 두번째 탭 -->
+                        <div class="tab_content_02">내용2</div>
+                        <!-- //두번째 탭 -->
+
+                        <!-- 세번째 탭 -->
+                        <div class="tab_content_03">내용3</div>
+                        <!-- //세번째 탭 -->
+
+                        <!-- 네번째 탭 -->
+                        <div class="tab_content_04">내용4</div>
+                        <!-- //네번째 탭 -->
+
+                        <!-- 다섯번째 탭 -->
+                        <div class="tab_content_05">내용5</div>
+                        <!-- //다섯번째 탭 -->
+
+                    </div>
+                </div>
             </dd>
         </dl>
 
