--- a/pub_list.html
+++ b/pub_list.html
@@ -536,7 +536,7 @@
                     date:'2022-09-23',
                     mdate:'2022-10-11',
                     con:'완료',
-                    etc:'(11/25) 업종별/지역별에 버튼 추가'
+                    etc:'(11/25) 업종별/지역별에 버튼 추가<br/>(12/21) 업종별 셀렉트박스 추가'
                 },
                 {
                     division: '',
@@ -719,7 +719,7 @@
                     date:'2022-08-29',
                     mdate:'2022-11-11',
                     con:'완료',
-                    etc:''
+                    etc:'(12/21) tab_btn에 class 추가'
                 },
                 {
                     division: '',
