교육 페이지 수정

--- a/pub_list.html
+++ b/pub_list.html
@@ -471,7 +471,7 @@
                     date:'2022-09-28',
                     mdate:'2022-10-06',
                     con:'완료',
-                    etc:'<span class="red">컨텐츠 확인필요</span>'
+                    etc:'(12/22) 내용수정'
                 },
                 {
                     division: '',
